<resources>
    <string name="app_name">LetsGo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- Drawer中的项目名称  -->
    <string name="nav_item_home">圈子</string>
    <string name="nav_item_friends">资讯</string>
    <string name="nav_item_logout">注销</string>


    <!-- 包含Drawer项目名称的数组 -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_logout</item>
    </string-array>


    <!--activity_login.xml && activity_sign.xml-->
    <string name="btn_login">登录</string>
    <string name="btn_sign">注册</string>

    <string name="text_login_info">登录信息</string>
    <string name="text_status_info">学籍信息</string>

    <string name="text_email">邮箱号</string>
    <string name="text_password">密码</string>
    <string name="text_password_repeat">重复密码</string>
    <string name="text_nick_name">昵称</string>
    <string name="text_phone">手机号</string>
    <string name="text_name">真实姓名</string>
    <string name="text_student_number">学号</string>
    <string name="text_id_number">身份证号</string>

    <string name="edit_email">请输入邮箱号</string>
    <string name="edit_password">请输入密码</string>
    <string name="edit_password_repeat">请再次输入密码</string>
    <string name="edit_nick_name">请输入昵称</string>
    <string name="edit_phone">请输入手机号</string>
    <string name="edit_name">请输入真实姓名</string>
    <string name="edit_student_number">请输入学号</string>
    <string name="edit_id_number">请输入身份证号</string>


    <!--title_activity-->
    <string name="title_activity_web">网页</string>
    <string name="title_activity_group_message">GroupMessageActivity</string>
    <string name="title_activity_article">资讯</string>
    <string name="title_activity_group_info">GroupInfoActivity</string>
    <string name="title_activity_empty">EmptyActivity</string>
    <string name="title_activity_list_group_message_image">ListGroupMessageImageActivity</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_user_info">个人信息</string>
    <string name="title_activity_add_group_message">发帖</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_sign">注册</string>
</resources>
