<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vivi.letsgo.ui.SignActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fadingEdge="none"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="12sp"
                    android:text="@string/text_login_info"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_nick_name"
                        android:textSize="20sp"
                        android:textColor="@color/textColorBlack"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp" />

                    <EditText
                        android:id="@+id/edit_user_nick_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:hint="@string/edit_nick_name"
                        android:layout_marginRight="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_email"
                        android:textSize="20sp"
                        android:textColor="@color/textColorBlack"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <EditText
                        android:id="@+id/edit_user_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textSize="20sp"
                        android:hint="@string/edit_email"
                        android:textCursorDrawable="@null"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_phone"
                        android:textSize="20sp"
                        android:textColor="@color/textColorBlack"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <EditText
                        android:id="@+id/edit_user_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textSize="20sp"
                        android:hint="@string/edit_phone"
                        android:textCursorDrawable="@null"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_password"
                        android:textSize="20sp"
                        android:textColor="@color/textColorBlack"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <EditText
                        android:id="@+id/edit_user_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:inputType="textPassword"
                        android:hint="@string/edit_password"
                        android:textCursorDrawable="@null"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_password_repeat"
                        android:textSize="20sp"
                        android:textColor="@color/textColorBlack"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <EditText
                        android:id="@+id/edit_user_password_repeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:inputType="textPassword"
                        android:hint="@string/edit_password_repeat"
                        android:textCursorDrawable="@null"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="12sp"
                    android:text="@string/text_status_info"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_name"
                        android:textSize="20sp"
                        android:textColor="@color/textColorBlack"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <EditText
                        android:id="@+id/edit_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:hint="@string/edit_name"
                        android:textCursorDrawable="@null"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_student_number"
                        android:textSize="20sp"
                        android:textColor="@color/textColorBlack"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <EditText
                        android:id="@+id/edit_user_student_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textSize="20sp"
                        android:hint="@string/edit_student_number"
                        android:textCursorDrawable="@null"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_id_number"
                        android:textSize="20sp"
                        android:textColor="@color/textColorBlack"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <EditText
                        android:id="@+id/edit_user_id_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textSize="20sp"
                        android:hint="@string/edit_id_number"
                        android:textCursorDrawable="@null"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/btn_sign"
                android:textSize="20sp"
                android:textColor="@color/textColorWhite"
                android:background="@drawable/bg_btn_dark_disable" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
