<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vivi.letsgo.ui.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fadingEdge="none"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_user_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    android:hint="@string/edit_email"
                    android:textCursorDrawable="@null"/>
                <EditText
                    android:id="@+id/edit_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:textSize="20sp"
                    android:inputType="textPassword"
                    android:hint="@string/edit_password"
                    android:textCursorDrawable="@null"/>
            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dip"
                android:text="@string/btn_login"
                android:textSize="20sp"
                android:textColor="@color/textColorWhite"
                android:background="@drawable/bg_btn_dark_enable" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
